Login and registration pages and funcitionality

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,4 @@
 @import "./assets/scss/global";
 @import "./Pages/Homepage/Homepage.scss";
+@import "./assets/scss/Auth.scss";
+@import "./Components/form/form.scss";
