Login , sign up and email verication

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,4 @@
 @import "./Pages/Homepage/Homepage.scss";
 @import "./assets/scss/Auth.scss";
 @import "./Components/form/form.scss";
+@import "./Pages/Verifications/Verifications.scss";
