--- a/src/Components/form/form.scss
+++ b/src/Components/form/form.scss
@@ -17,9 +17,9 @@
 
 .error {
 	color: $error;
-	margin-top: -15px;
+	margin-top: -12px;
 	margin-bottom: 15px;
 	font-size: 13px;
-	font-weight: bold;
 	font-family: "Poppins", sans-serif;
+	max-width: 400px;
 }
