--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,5 @@
 @import "./assets/scss/Auth.scss";
 @import "./Components/form/form.scss";
 @import "./Pages/Verifications/Verifications.scss";
+@import "./Components/Header/Header.scss";
+@import "./Pages/Dashboard/Dashboard.scss";
