Add Categories and candidates

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,3 +5,8 @@
 @import "./Pages/Verifications/Verifications.scss";
 @import "./Components/Header/Header.scss";
 @import "./Pages/Dashboard/Dashboard.scss";
+@import "./Pages/CreateElection/CreateElection.scss";
+@import "./Pages/CreateElection/Steps/Steps.scss";
+@import "./Pages/CreateElection/Category/Category.scss";
+@import "./Pages/CreateElection/CategoryPopup/CategoryPopup.scss";
+@import "./Pages/CreateElection/CandidatePopup/CandidatePopup.scss";
