--- a/src/Pages/CreateElection/Steps/Steps.scss
+++ b/src/Pages/CreateElection/Steps/Steps.scss
@@ -68,4 +68,14 @@
 			opacity: 0.8;
 		}
 	}
+	.waiting {
+		width: 100%;
+		height: 40vh;
+		@include flex(center, center);
+		flex-direction: column;
+		img {
+			width: 150px;
+			height: 150px;
+		}
+	}
 }
