--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,8 @@
 @import "./Pages/Verifications/Verifications.scss";
 @import "./Components/Header/Header.scss";
 @import "./Pages/Dashboard/Dashboard.scss";
+@import "./Pages/Election/Election.scss";
+@import "./Pages/Election/ElectionComponent/ElectionComponent.scss";
 @import "./Pages/CreateElection/CreateElection.scss";
 @import "./Pages/CreateElection/Steps/Steps.scss";
 @import "./Pages/CreateElection/Category/Category.scss";
