Edit article works with createElection component. ElectionData fetch invloves voters

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import "./Pages/Homepage/Homepage.scss";
 @import "./assets/scss/Auth.scss";
 @import "./Components/form/form.scss";
+@import "./Components/Loading/Loading.scss";
 @import "./Pages/Verifications/Verifications.scss";
 @import "./Components/Header/Header.scss";
 @import "./Pages/Dashboard/Dashboard.scss";
