--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -13,6 +13,15 @@
 			gap: 30px;
 			li {
 				font-weight: bold;
+				a {
+					color: $whiteText1;
+					&:hover {
+						color: $whiteText2;
+					}
+				}
+				.active {
+					color: $whiteText2;
+				}
 			}
 			li.logout {
 				color: $error;
