View voters Loading on createElection page refactor Add empty in fetching voters and take care  of it in fetchingElections

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@
 @import "./Pages/Dashboard/Dashboard.scss";
 @import "./Pages/Election/Election.scss";
 @import "./Pages/Election/ElectionComponent/ElectionComponent.scss";
+@import "./Pages/Election/Voters/Voters.scss";
 @import "./Pages/CreateElection/CreateElection.scss";
 @import "./Pages/CreateElection/Steps/Steps.scss";
 @import "./Pages/CreateElection/Category/Category.scss";
