--- a/src/Pages/Election/Election.scss
+++ b/src/Pages/Election/Election.scss
@@ -31,4 +31,29 @@
 	.components {
 		padding: 20px 0;
 	}
+	.voted {
+		width: 100%;
+		height: 90vh;
+		@include flex(center, center);
+		flex-direction: column;
+		.fa-check {
+			background-color: $success;
+			width: 50px;
+			height: 50px;
+			@include flex(center, center);
+			font-size: 24px;
+			border-radius: 50%;
+			color: $whiteBg1;
+			margin-bottom: 20px;
+		}
+		button{
+			border : none;
+			background-color : transparent;
+			text-decoration : underline;
+			color:$whiteText2;
+			&:hover{
+				cursor : pointer;
+			}
+		}
+	}
 }
