Results Page completed

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
 @import "./Pages/Election/Election.scss";
 @import "./Pages/Election/ElectionComponent/ElectionComponent.scss";
 @import "./Pages/Election/Voters/Voters.scss";
+@import "./Pages/Election/Results/Results.scss";
 @import "./Pages/CreateElection/CreateElection.scss";
 @import "./Pages/CreateElection/Steps/Steps.scss";
 @import "./Pages/CreateElection/Category/Category.scss";
