--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -24,6 +24,7 @@ $won: rgb(156, 202, 156);
 	margin: 0;
 	box-sizing: border-box;
 	font-family: "Merriweather", sans-serif;
+	word-break: break-all;
 }
 ul {
 	list-style-type: none;
