--- a/src/Pages/CreateElection/CreateElection.scss
+++ b/src/Pages/CreateElection/CreateElection.scss
@@ -4,7 +4,6 @@
 	.createElection__container {
 		width: 100%;
 		min-height: 60vh;
-		padding-left: 20px;
 
 		h3.rules {
 			margin-top: 30px;
@@ -24,6 +23,17 @@
 		button {
 			width: 200px;
 			margin-top: 20px;
+		}
+	}
+}
+
+@media screen and (max-width: 860px) {
+	.createElection {
+		.createElection__container {
+			h3.rules {
+				font-size: 16px;
+				margin-bottom: 10px;
+			}
 		}
 	}
 }
