--- a/src/Pages/CreateElection/Steps/Steps.scss
+++ b/src/Pages/CreateElection/Steps/Steps.scss
@@ -1,4 +1,5 @@
 .rules {
+	padding: 0 20px;
 	ul {
 		list-style-type: disc;
 		margin-top: 10px;
@@ -16,11 +17,15 @@
 }
 
 .step1 {
+	padding: 0;
+	margin: 0;
 	form {
 		@include flex(flex-start, flex-start);
 		flex-direction: column;
-		width: 600px;
+		max-width: 600px;
+		width: 100%;
 		margin: 0 auto;
+		padding: 0;
 		label {
 			text-align: left;
 		}
@@ -30,9 +35,7 @@
 			margin-bottom: 20px;
 		}
 		.actions {
-			gap: 20px;
-			width: 100%;
-			@include flex(center, center);
+		
 			button {
 				margin-right: 20px;
 			}
@@ -74,5 +77,27 @@
 		height: 40vh;
 		@include flex(center, center);
 		flex-direction: column;
+	}
+}
+
+@media screen and (max-width: 860px) {
+	.rules {
+		ul {
+			li {
+				font-size: 12px;
+			}
+		}
+	}
+}
+@media screen and (max-width: 460px) {
+	.rules , .step1 , .step2 , .step3 {
+		.actions {
+			flex-direction: column;
+			margin-top: 20px;
+			button {
+				margin: 0;
+				width: 100%;
+			}
+		}
 	}
 }
