--- a/src/Pages/Election/ElectionComponent/ElectionComponent.scss
+++ b/src/Pages/Election/ElectionComponent/ElectionComponent.scss
@@ -77,3 +77,22 @@
 		}
 	}
 }
+
+@media screen and (max-width : 820px){
+	.election__component{
+		.component__content{
+			.candidates{
+					grid-template-columns: repeat(2, 1fr);
+			}
+		}
+	}
+}
+@media screen and (max-width : 585px){
+	.election__component{
+		.component__content{
+			.candidates{
+					grid-template-columns:1fr ;
+			}
+		}
+	}
+}
