--- a/src/Pages/Homepage/Homepage.scss
+++ b/src/Pages/Homepage/Homepage.scss
@@ -15,7 +15,6 @@
 		font-size: 14px;
 	}
 	.actions {
-		@include flex(center, center);
 		button {
 			margin-top: 20px;
 			margin-left: 20px;
@@ -30,8 +29,12 @@
 		}
 		.actions {
 			flex-direction: column;
+			width : 100%;
+			margin-top : 30px;
 			button {
-				width: 200px;
+				width: 100%;
+				margin : 0;
+				height: 45px;
 			}
 		}
 	}
