--- a/src/assets/scss/Auth.scss
+++ b/src/assets/scss/Auth.scss
@@ -2,7 +2,6 @@
 	@include flex(center, center);
 	flex-direction: column;
 	height: 100vh;
-
 	h3 {
 		margin-bottom: 20px;
 		text-align: center;
@@ -27,6 +26,18 @@
 		font-size: 13px;
 		a {
 			margin-left: 5px;
+		}
+	}
+}
+
+@media screen and (max-width : 700px){
+	.auth{
+		width : 100%;
+		.auth__container{
+			width: 100%;
+		}
+		input{
+			width: 100%;
 		}
 	}
 }
